--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,10 @@ defaults:
   - scope:
       path: ""
     values:
-      image: /assets/img/og_image_NewZealand_Coding_Coffee.jpg
+      image: 
+        path: /assets/img/og_image_NewZealand_Coding_Coffee.jpg
+        width: 1200
+        height: 630
 
 
 # Build settings
