Add hello world section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,8 @@
         "doctype-first": false
     },
     "cSpell.language": "en"
+    },
+    "cSpell.words": [
+        "endhighlight"
+    ]
 }
